# android-cmake

./: .gitignore  LICENSE  README.md  common.cmake
00-console/: CMakeLists.txt  README.md  foo.cpp
01-load-libraries/: CMakeLists.txt  README.md  android_main.cpp
02-console-boost-filesystem/: CMakeLists.txt  README.md  foo.cpp
03-console-boost-iostreams/: CMakeLists.txt  README.md
03-console-boost-iostreams/cmake/Hunter/: config.cmake
04-console-opencv/: CMakeLists.txt  README.md  foo.cpp
05-qt-hellogl2/: CMakeLists.txt  README.md  config.cmake  main.cpp  static_qt_plugins.cpp
06-qt-hellogl2-launch/: CMakeLists.txt  README.md
07-mousearea-qml/: CMakeLists.txt  README.md  main.cpp  mousearea.qrc
08-declarative-camera/: AndroidManifest.xml  CMakeLists.txt  README.md
09-vc-mdd-debug/: CMakeLists.txt  android_main.cpp
